opam-version: "2.0"
synopsis: "Search for directories"
description: """
"""
maintainer: "Darren Ldl <darrenldldev@gmail.com>"
authors: "Darren Ldl"
license: "MIT"
homepage: "https://github.com/darrenldl/dirsift"
bug-reports: "https://github.com/darrenldl/dirsift/issues"
dev-repo: "git+https://github.com/darrenldl/dirsift"
depends: [
  "ocaml" {>= "4.08.1"}
  "dune" {>= "2.7.0"}
  "containers" {>= "3.0"}
  "fileutils"
  "toml" {>= "6.0.0"}
  "timere"
]
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
